--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -63,4 +63,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: ghcr.io/shotz9/mlops-trends:latest
