--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  schedule:
+    # Jalankan tiap 1 jam sekali
+    - cron: "0 * * * *"
 
 jobs:
   build:
@@ -24,7 +27,7 @@ jobs:
           pip install -r requirements.txt
           pip install "dvc[s3]>=3.50.0"
 
-      - name: Configure DVC remote
+      - name: Configure DVC remote (Backblaze B2)
         run: |
           dvc remote add -d -f b2remote s3://$B2_BUCKET_NAME
           dvc remote modify b2remote endpointurl $B2_ENDPOINT
@@ -36,11 +39,19 @@ jobs:
           B2_KEY_ID: ${{ secrets.B2_KEY_ID }}
           B2_APP_KEY: ${{ secrets.B2_APP_KEY }}
 
-      - name: Pull latest dataset
+      - name: Pull latest dataset from DVC remote
         run: dvc pull -r b2remote || true
 
-      - name: Run scraping stage
+      - name: Run scraping pipeline (DVC repro)
         run: dvc repro
 
-      - name: Push updated data to DVC remote
+      - name: Push updated dataset to remote
         run: dvc push -r b2remote
+
+      - name: Commit & push updated DVC lockfile
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add dvc.lock data/.gitignore || true
+          git commit -m "Auto-update trends data [skip ci]" || echo "No changes to commit"
+          git push || true
