--- a/.github/workflows/mlops.yml
+++ b/.github/workflows/mlops.yml
@@ -1,4 +1,4 @@
-name: MLOps CI/CD
+name: Scrape Trends24 Indonesia
 
 on:
   push:
@@ -8,6 +8,9 @@ on:
   schedule:
     # Jalankan tiap 1 jam sekali
     - cron: "0 * * * *"
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -49,9 +52,11 @@ jobs:
         run: dvc push -r b2remote
 
       - name: Commit & push updated DVC lockfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add dvc.lock data/.gitignore || true
           git commit -m "Auto-update trends data [skip ci]" || echo "No changes to commit"
-          git push || true
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }} || true
