--- a/mlflow-server/Dockerfile
+++ b/mlflow-server/Dockerfile
@@ -2,19 +2,17 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-RUN pip install --no-cache-dir mlflow boto3 psycopg2-binary
+# Install only needed libraries
+RUN pip install --no-cache-dir mlflow
 
-# MLflow will run on Railway dynamic port
+# Dynamic port from Railway
 ENV PORT=5000
 EXPOSE 5000
 
-# B2 configuration
-ENV MLFLOW_S3_ENDPOINT_URL=${B2_ENDPOINT}
-ENV AWS_ACCESS_KEY_ID=${B2_KEY_ID}
-ENV AWS_SECRET_ACCESS_KEY=${B2_APP_KEY}
+RUN mkdir -p /app/mlruns && mkdir -p /app/mlartifacts
 
 CMD mlflow server \
     --backend-store-uri sqlite:///mlflow.db \
-    --default-artifact-root s3://mlflow-artifacts \
+    --default-artifact-root /app/mlartifacts \
     --host 0.0.0.0 \
     --port $PORT
